<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rodolfo.projetogatos.MenuInicial">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btperfil"
            android:onClick="perfilClick" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btadotarAddGato"
            android:onClick="adotarClick" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btDisponibilizar"
            android:onClick="disponibilizarClick" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
